tui/src/bottom_pane/snapshots/ody_tui__bottom_pane__tests__pinned_plan_renders_above_composer_snapshot.snap
---
source: tui/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, area)"
---
• Updated Plan                                    
  └ Working on feature                            
    ✔ Explore codebase                            
    □ Implement the change                        
    □ Write tests                                 
                                                  
› Ask Ody to do anything                          
                                                  
  ? for shortcuts              100% context left
